public class SubOperation implements Operation {
    public double compute(double a, double b) {
        return a - b;
    }
}
