@startuml
skinparam defaultFontName SimHei
skinparam backgroundColor #FEFEFE
skinparam classBorderColor #333333
skinparam classFontSize 14
skinparam defaultFontSize 12

title 基础版计算器类图（无工厂模式）

interface Operation {
    + double compute(double a, double b)
}

class AddOperation {
    + double compute(double a, double b)
}

class SubOperation {
    + double compute(double a, double b)
}

class MulOperation {
    + double compute(double a, double b)
}

class DivOperation {
    + double compute(double a, double b)
}

class CalculatorMain {
    + void main(String[] args)
}

Operation <|.. AddOperation
Operation <|.. SubOperation
Operation <|.. MulOperation
Operation <|.. DivOperation
CalculatorMain ..> AddOperation : " 直接new"
CalculatorMain ..> SubOperation : " 直接new"
CalculatorMain ..> MulOperation : " 直接new"
CalculatorMain ..> DivOperation : " 直接new"
@enduml
